# client

./: Cargo.toml  README.md  data.json  data.json.old  profile.json  settings.json
grisked-profile/: Cargo.toml
grisked-profile/src/: lib.rs  profile.rs  serde_utils.rs
grisked-profile/src/models/: account.rs  bill.rs  currency.rs  data.rs  label.rs  mod.rs  settings.rs
grisked-ui/: Cargo.toml  profile.json
grisked-ui/src/: app.rs  font.rs  lib.rs  view.rs
grisked-ui/src/entity/: account_data.rs  accounts.rs  accountsdata.rs  background.rs  backup.rs  custom_box.rs  dashboard.rs  deadlines.rs  menu.rs  mod.rs  navbar.rs  recent_accounts.rs  sidebar.rs  sidebar_button.rs
grisked-ui/src/handler/: account_page.rs  mod.rs  save.rs  update_box.rs  zoom.rs
grisked-ui/src/stylesheet/: account_button.rs  box_button.rs  draw_spendings.rs  label_square.rs  mod.rs  navbar.rs  regular_button.rs  sidebar.rs  spendings_chart.rs  transparent_input.rs
grisked-ui/src/stylesheets/: custom_box.rs  mod.rs  regular_button.rs
