[package]
name = "grisked-ui"
version = "0.1.0"
authors = ["Paul COMTE <paul.codepro@gmail.com>", "Guillaume BOUDAILLE <guillaume.boudaille@epitech.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5.2", features = ["svg", "canvas"] }
grisked-profile = { path = "../grisked-profile" }
plotters = { version = "0.3.4", default-features = false, features = ["full_palette", "svg_backend"] }
